# khparse

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  setup.sh
benchmarks/: CMakeLists.txt  char_benchmarks.cpp
benchmarks/compiletime/conditional_vs_constexpr_if/: generate_test.py  run_tests.sh
benchmarks/runtime/: generate_char_parsers.py
examples/: calculator.cpp  calculator2.cpp
examples/6502_assembler/: basic_example.txt  kh6502.cpp
examples/simple_6502_assembler/: autoboot_example.txt  simple_kh6502.cpp
hooks/: install.sh  pre-commit
khparse/: khparse.hpp
old/: main.cpp  main2.cpp  main3.cpp  main4.cpp  main5.cpp  main6.cpp
src/: khparse.hpp  main.cpp
